[gd_scene load_steps=5 format=1]

[ext_resource path="res://Scripts/playerRun.gd" type="Script" id=1]
[ext_resource path="res://Assets/icon.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 31.5664, 31.2404 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 31.1897, 1.60823 )

[node name="Player" type="Node2D" groups=[ "player" ]]

[node name="player" type="KinematicBody2D" parent="." groups=[ "player" ]]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="player"]

texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="player"]

z/relative = false
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Camera2D" type="Camera2D" parent="player"]

offset = Vector2( 300, -100 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = false
smoothing/speed = 5.0
drag_margin/left = 0.0
drag_margin/top = 0.0
drag_margin/right = 0.0
drag_margin/bottom = 0.0

[node name="TimerHolder" type="Node" parent="player"]

[node name="jumpTime" type="Timer" parent="player/TimerHolder"]

process_mode = 1
wait_time = 0.8
one_shot = true
autostart = false

[node name="groundCheck" type="Area2D" parent="player"]

editor/display_folded = true
transform/pos = Vector2( -0.454582, 31.5845 )
input/pickable = false
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0.314026, 2.40899 )
shapes/0/trigger = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
__meta__ = { "_edit_group_":true }

[node name="groundCheck" type="CollisionShape2D" parent="player/groundCheck"]

transform/pos = Vector2( 0.314026, 2.40899 )
shape = SubResource( 2 )
trigger = true
_update_shape_index = 0

[connection signal="timeout" from="player/TimerHolder/jumpTime" to="player" method="_on_jumpTime_timeout"]

[connection signal="body_enter" from="player/groundCheck" to="player" method="_on_groundCheck_body_enter"]

[connection signal="body_exit" from="player/groundCheck" to="player" method="_on_groundCheck_body_exit"]


